force-app/main/default/objects/Proposal_Line__c/Proposal_Line__c.object-meta.xml
<CustomObject>
    <label>Proposal Line</label>
    <nameField>
        <label>Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proposal Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>