force-app/main/default/objects/Proposal_Line__c/fields/Cost__c.field-meta.xml
<CustomField>
  <fullName>Cost__c</fullName>
  <label>Unit Cost</label>
  <type>Currency</type>
  <precision>14</precision>
  <scale>2</scale>
</CustomField>