force-app/main/default/objects/Proposal_Line__c/fields/Discount_Amount__c.field-meta.xml
<CustomField>
  <fullName>Discount_Amount__c</fullName>
  <label>Discount Amount</label>
  <type>Currency</type>
  <precision>16</precision>
  <scale>2</scale> 
  <formula>ROUND(Subtotal__c - Total_Price__c, 2)</formula>
</CustomField>