force-app/main/default/objects/Proposal_Line__c/fields/Discounted_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Unit_Price__c</fullName>
    <formula>IF(Quantity__c &gt; 0, Total_Price__c / Quantity__c, 0)</formula>
    <label>Discounted Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>