force-app/main/default/objects/Proposal_Line__c/fields/Fulfillment_Target__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Target__c</fullName>
    <label>Fulfillment Target</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetName>Project_Fulfillment_Route</valueSetName>
    </valueSet>
</CustomField>