force-app/main/default/objects/Proposal_Line__c/fields/Line_Gross_Margin__c.field-meta.xml
<CustomField>
  <fullName>Line_Gross_Margin__c</fullName>
  <label>Line Gross Margin</label>
  <type>Percent</type>
  <precision>5</precision>
  <scale>2</scale>
  <formula>
IF(
  Total_Price__c &gt; 0,
  (Total_Price__c - Total_Cost__c) / Total_Price__c,
  0
)
  </formula>
</CustomField>