force-app/main/default/objects/Proposal_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Proposal Lines</relationshipLabel>
    <relationshipName>Product_Proposal_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>