force-app/main/default/objects/Proposal_Line__c/fields/Product_Type__c.field-meta.xml
<CustomField>
  <fullName>Product_Type__c</fullName>
  <label>Product Type</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <sorted>true</sorted>
      <value><fullName>Material</fullName><default>false</default><label>Material</label></value>
      <value><fullName>Labor</fullName><default>false</default><label>Labor</label></value>
      <value><fullName>Service</fullName><default>true</default><label>Service</label></value>
      <value><fullName>Fee</fullName><default>false</default><label>Fee</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>