force-app/main/default/objects/Proposal_Line__c/fields/Source_Proposal_Line__c.field-meta.xml
<CustomField>
    <fullName>Source_Proposal_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Proposal Line</label>
    <referenceTo>Proposal_Line__c</referenceTo>
    <relationshipLabel>Proposal Lines (Change Order Proposal Lines)</relationshipLabel>
    <relationshipName>Proposal_Change_Proposal_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>