force-app/main/default/objects/Proposal_Line__c/fields/Use_Per_Unit_Pricing__c.field-meta.xml
<CustomField>
  <fullName>Use_Per_Unit_Pricing__c</fullName>
  <label>Use Per Unit Pricing</label>
  <type>Checkbox</type>
  <defaultValue>true</defaultValue>
</CustomField>